Fix problem where info panel was too large

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,7 +62,7 @@ ul {
 
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: auto 3fr;
+        grid-template-rows: auto auto 1fr;
     }
 
     nav {
